force-app/main/default/objects/Agency_Info__c/Agency_Info__c.object-meta.xml
<CustomObject>
    <label>TMC Info</label>
    <nameField>
        <displayFormat>TMC-{0000}</displayFormat>
        <label>TMC Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMC Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>