force-app/main/default/objects/Agency_Info__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <description>Access type Picklist field Creation - CRM-9231</description>
    <inlineHelpText>L Type = Sell &amp; Ticket, C Type = Sell, Ticket, update (Mark up),redistribute</inlineHelpText>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>