force-app/main/default/objects/Agency_Info__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>For intergration</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>