force-app/main/default/objects/Agency_Info__c/fields/Agency_Product_Fares__c.field-meta.xml
<CustomField>
    <fullName>Agency_Product_Fares__c</fullName>
    <label>Agency Product Fares</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Carer</fullName>
            </value>
            <value>
                <fullName>Entertainment Fares - DOM</fullName>
            </value>
            <value>
                <fullName>Entertainment Fares - INT</fullName>
            </value>
            <value>
                <fullName>Fly Cruise</fullName>
            </value>
            <value>
                <fullName>Humanitarian</fullName>
            </value>
            <value>
                <fullName>Marine Fares</fullName>
            </value>
            <value>
                <fullName>Resident Fare</fullName>
            </value>
            <value>
                <fullName>Student Fares</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Wholesale - Domestic</fullName>
            </value>
            <value>
                <fullName>Wholesale-International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>