force-app/main/default/objects/Agency_Info__c/fields/Channel_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Channel_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel End Date</label>
    <type>Date</type>
</CustomField>