force-app/main/default/objects/Agency_Info__c/fields/Channel_RecG_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Channel_RecG_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel RecG Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>