force-app/main/default/objects/Agency_Info__c/fields/Channel_YR_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Channel_YR_Identifier__c</fullName>
    <label>Channel YR Identifier</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>