force-app/main/default/objects/Agency_Info__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>This stores the GDS (Global Distribution System) Values</description>
    <inlineHelpText>Global Distribution System</inlineHelpText>
    <label>GDS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AARON GROUP</fullName>
            </value>
            <value>
                <fullName>Aeronology</fullName>
            </value>
            <value>
                <fullName>AirGateway</fullName>
            </value>
            <value>
                <fullName>Amadeus</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Axess</fullName>
            </value>
            <value>
                <fullName>ClarityTTS</fullName>
            </value>
            <value>
                <fullName>CTM</fullName>
            </value>
            <value>
                <fullName>Duffel</fullName>
            </value>
            <value>
                <fullName>Expedia</fullName>
            </value>
            <value>
                <fullName>Farelogix</fullName>
                <label>Farelogix (F1)</label>
            </value>
            <value>
                <fullName>Galileo</fullName>
            </value>
            <value>
                <fullName>Infini</fullName>
            </value>
            <value>
                <fullName>Kyte</fullName>
            </value>
            <value>
                <fullName>Mystifly</fullName>
            </value>
            <value>
                <fullName>Navan</fullName>
            </value>
            <value>
                <fullName>QDP Portal</fullName>
            </value>
            <value>
                <fullName>Sabre</fullName>
            </value>
            <value>
                <fullName>Sabre Asia Pacific</fullName>
            </value>
            <value>
                <fullName>Serko</fullName>
            </value>
            <value>
                <fullName>Spotnana</fullName>
            </value>
            <value>
                <fullName>TPConnects</fullName>
            </value>
            <value>
                <fullName>Travelfusion</fullName>
            </value>
            <value>
                <fullName>Travelfusion – Concur</fullName>
            </value>
            <value>
                <fullName>Travelfusion – Cytric</fullName>
            </value>
            <value>
                <fullName>Travelfusion – Locomote</fullName>
            </value>
            <value>
                <fullName>Travelsky</fullName>
            </value>
            <value>
                <fullName>Verteil Technologies</fullName>
            </value>
            <value>
                <fullName>Worldspan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>