force-app/main/default/objects/Agency_Info__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>This field will be used for RecG fare filing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>