force-app/main/default/objects/Agency_Info__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Id</label>
    <type>Email</type>
</CustomField>