force-app/main/default/objects/Agency_Info__c/fields/External_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Reference ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>