force-app/main/default/objects/Agency_Info__c/fields/Farelogix__c.field-meta.xml
<CustomField>
    <fullName>Farelogix__c</fullName>
    <description>This stores the GDS (Global Distribution System) Values</description>
    <inlineHelpText>Global Distribution System</inlineHelpText>
    <label>gds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0BE8</fullName>
                <isActive>false</isActive>
                <label>0BE8</label>
            </value>
            <value>
                <fullName>0CN8</fullName>
                <isActive>false</isActive>
                <label>0CN8</label>
            </value>
            <value>
                <fullName>0JLD</fullName>
                <isActive>false</isActive>
                <label>0JLD</label>
            </value>
            <value>
                <fullName>0MLD</fullName>
                <isActive>false</isActive>
                <label>0MLD</label>
            </value>
            <value>
                <fullName>2LJD</fullName>
                <isActive>false</isActive>
                <label>2LJD</label>
            </value>
            <value>
                <fullName>2PYD</fullName>
                <isActive>false</isActive>
                <label>2PYD</label>
            </value>
            <value>
                <fullName>2Y2D</fullName>
                <isActive>false</isActive>
                <label>2Y2D</label>
            </value>
            <value>
                <fullName>32AD</fullName>
                <isActive>false</isActive>
                <label>32AD</label>
            </value>
            <value>
                <fullName>36XA</fullName>
                <isActive>false</isActive>
                <label>36XA</label>
            </value>
            <value>
                <fullName>36XB</fullName>
                <isActive>false</isActive>
                <label>36XB</label>
            </value>
            <value>
                <fullName>36XC</fullName>
                <isActive>false</isActive>
                <label>36XC</label>
            </value>
            <value>
                <fullName>36XD</fullName>
                <isActive>false</isActive>
                <label>36XD</label>
            </value>
            <value>
                <fullName>36XF</fullName>
                <isActive>false</isActive>
                <label>36XF</label>
            </value>
            <value>
                <fullName>36XG</fullName>
                <isActive>false</isActive>
                <label>36XG</label>
            </value>
            <value>
                <fullName>38M8</fullName>
                <isActive>false</isActive>
                <label>38M8</label>
            </value>
            <value>
                <fullName>3KW0</fullName>
                <isActive>false</isActive>
                <label>3KW0</label>
            </value>
            <value>
                <fullName>3QG8</fullName>
                <isActive>false</isActive>
                <label>3QG8</label>
            </value>
            <value>
                <fullName>3TK</fullName>
                <isActive>false</isActive>
                <label>3TK</label>
            </value>
            <value>
                <fullName>3UI</fullName>
                <isActive>false</isActive>
                <label>3UI</label>
            </value>
            <value>
                <fullName>3US</fullName>
                <isActive>false</isActive>
                <label>3US</label>
            </value>
            <value>
                <fullName>3VA</fullName>
                <isActive>false</isActive>
                <label>3VA</label>
            </value>
            <value>
                <fullName>3VO</fullName>
                <isActive>false</isActive>
                <label>3VO</label>
            </value>
            <value>
                <fullName>4EM</fullName>
                <isActive>false</isActive>
                <label>4EM</label>
            </value>
            <value>
                <fullName>4EO</fullName>
                <isActive>false</isActive>
                <label>4EO</label>
            </value>
            <value>
                <fullName>4EU</fullName>
                <isActive>false</isActive>
                <label>4EU</label>
            </value>
            <value>
                <fullName>4EW</fullName>
                <isActive>false</isActive>
                <label>4EW</label>
            </value>
            <value>
                <fullName>4EY</fullName>
                <isActive>false</isActive>
                <label>4EY</label>
            </value>
            <value>
                <fullName>4FB</fullName>
                <isActive>false</isActive>
                <label>4FB</label>
            </value>
            <value>
                <fullName>4FD</fullName>
                <isActive>false</isActive>
                <label>4FD</label>
            </value>
            <value>
                <fullName>4FT</fullName>
                <isActive>false</isActive>
                <label>4FT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>