force-app/main/default/objects/Agency_Info__c/fields/GDS_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>GDS_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDS Effective Date</label>
    <type>Date</type>
</CustomField>