force-app/main/default/objects/Agency_Info__c/fields/GDS_Status__c.field-meta.xml
<CustomField>
    <fullName>GDS_Status__c</fullName>
    <description>Introduced as part of Agency Channel Registration, It will be updated by ETL Jobs When its status is New</description>
    <label>GDS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Validating</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending deregistration</fullName>
            </value>
            <value>
                <fullName>Deregistered</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>De-registered</fullName>
                <isActive>false</isActive>
                <label>De-registered</label>
            </value>
            <value>
                <fullName>Pending de-registration</fullName>
                <isActive>false</isActive>
                <label>Pending de-registration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>