force-app/main/default/objects/Agency_Info__c/fields/GDS_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>GDS_Status_Change_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GDS Status Change Date</label>
    <type>Date</type>
</CustomField>