force-app/main/default/objects/Agency_Info__c/fields/Last_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Inactive_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Inactive Date</label>
    <type>DateTime</type>
</CustomField>