force-app/main/default/objects/Agency_Info__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating that the record was migrated from Quest.</description>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>