force-app/main/default/objects/Agency_Info__c/fields/owner_country__c.field-meta.xml
<CustomField>
    <fullName>owner_country__c</fullName>
    <formula>ENCODED:{!ID:Owner:User.Country}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>owner country</label>
    <type>Text</type>
</CustomField>