force-app/main/default/objects/Agency_Info__c/fields/PCC__c.field-meta.xml
<CustomField>
    <fullName>PCC__c</fullName>
    <description>This is to store the PCC (Pseudo City Code)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pseudo City Code</inlineHelpText>
    <label>PCC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>