force-app/main/default/objects/Agency_Info__c/fields/Quest_Interest_Id__c.field-meta.xml
<CustomField>
    <fullName>Quest_Interest_Id__c</fullName>
    <externalId>true</externalId>
    <label>Quest Interest Id</label>
    <type>AutoNumber</type>
</CustomField>