force-app/main/default/objects/Agency_Info__c/fields/Surcharge_Exemption_Status__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Exemption_Status__c</fullName>
    <label>Surcharge Exemption Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending Inactivation</fullName>
            </value>
            <value>
                <fullName>Pending deregistration</fullName>
            </value>
            <value>
                <fullName>Deregistered</fullName>
            </value>
            <value>
                <fullName>De-registered</fullName>
                <isActive>false</isActive>
                <label>De-registered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>