force-app/main/default/objects/Agency_Info__c/fields/TMC_Info_ID_unique__c.field-meta.xml
<CustomField>
    <fullName>TMC_Info_ID_unique__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMC Info ID (unique)</label>
    <type>Text</type>
</CustomField>