force-app/main/default/objects/Agency_Info__c/fields/True_City_Code__c.field-meta.xml
<CustomField>
    <fullName>True_City_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>True City Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>