force-app/main/default/objects/Agency_Info__c/recordTypes/Distribution.recordType-meta.xml
<RecordType>
    <fullName>Distribution</fullName>
    <active>true</active>
    <description>To be used for Customer and Agency Accounts</description>
    <label>Distribution</label>
</RecordType>