force-app/main/default/objects/Agency_Info__c/recordTypes/GDS.recordType-meta.xml
<RecordType>
    <fullName>GDS</fullName>
    <active>true</active>
    <description>To be used only for Agency Accounts</description>
    <label>GDS</label>
</RecordType>