force-app/main/default/objects/Agency_Info__c/recordTypes/Market_Segment.recordType-meta.xml
<RecordType>
    <fullName>Market_Segment</fullName>
    <active>true</active>
    <description>To be used only for Agency Accounts</description>
    <label>Market Segment</label>
</RecordType>