force-app/main/default/objects/Agency_Info__c/validationRules/GDS_Status_Restrict.validationRule-meta.xml
<ValidationRule>
    <fullName>GDS_Status_Restrict</fullName>
    <active>false</active>
    <description>Allow GDS Status edit on Blank and New</description>
    <errorConditionFormula>NOT(OR($Profile.Name==&apos;QAC API Integration Profile&apos;,$Profile.Name==&apos;System Administrator&apos;,$Profile.Name==&apos;Qantas System Administrator&apos;,$Profile.Name==&apos;Qantas System Admin - Freight&apos;,$Profile.Name==&apos;Qantas System Admin - QCC&apos;,$Profile.Name==&apos;Qantas System Admin - SND&apos;,$Profile.Name==&apos;Data Administrator&apos;)) &amp;&amp; IF(ISCHANGED( GDS_Status__c ),NOT(OR(ISPICKVAL( GDS_Status__c,&apos;New&apos;), ISPICKVAL(GDS_Status__c,&apos;&apos;))),false)</errorConditionFormula>
    <errorMessage>You are not allowed to edit GDS Status</errorMessage>
</ValidationRule>