force-app/main/default/objects/Agency_Info__c/validationRules/Mandatory_PCC_for_GDS_Recordtype.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_PCC_for_GDS_Recordtype</fullName>
    <active>false</active>
    <description>PCC field is mandatory for GDS record type.</description>
    <errorConditionFormula>RecordType.Name = &apos;GDS&apos;  &amp;&amp;  PCC__c  = &apos;&apos;</errorConditionFormula>
    <errorDisplayField>PCC__c</errorDisplayField>
    <errorMessage>PCC or Pseudo City Code field should have a value when a TMC info transaction is related to GDS - this helps us to minimise downstream errors for iDeal.</errorMessage>
</ValidationRule>