force-app/main/default/objects/Agency_Info__c/validationRules/Restrict_PCC_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_PCC_Changes</fullName>
    <active>true</active>
    <description>PCC should not be changes if the GDS Status is not blank</description>
    <errorConditionFormula>AND( 
$Setup.EnableValidationRule__c.Flag_To_Prevent_TMC_PCC_VR_Fired__c = FALSE,
RecordType.DeveloperName = &apos;GDS&apos;,
NOT($Permission.QC_Support_Team),
ISCHANGED(PCC__c), 
NOT(ISBLANK(TEXT(GDS_Status__c))) 
)</errorConditionFormula>
    <errorDisplayField>PCC__c</errorDisplayField>
    <errorMessage>You can change the PCC only when GDS Status is blank</errorMessage>
</ValidationRule>